@@ -4,7 +4,7 @@ import java.util.Random;
 import java.util.Vector;
 
 public class UnitManager {
-	
+	Random rn = new Random();
 	Vector<Player> playerList = new Vector<>();
 	Vector<Unit> monList = new Vector<>();
 	String path = "game"; // 패키지명 이름 쓰기
@@ -18,13 +18,13 @@ public class UnitManager {
 	}
 		
 	// 몬스터 사이즈 받아서 랜덤 세팅 
-	public void monsterRnSet(int size) {
+	 void monsterRnSet(int size) {
 		for(int i = 0; i<size; i++) {
-			int num = GameManager.rn.nextInt(mons.length);
+			int num = rn.nextInt(mons.length);
 			try {
 				// 클래스명 모를때 
 				Class<?> clazz = Class.forName(path + mons[num]);
-				Object obj = clazz.newInstance();
+				Object obj = clazz.getDeclaredConstructor().newInstance();
 				Unit temp = (Unit)obj;
 				int hp = rn.nextInt(100)+100;
 				int power = rn.nextInt(10)+10;
